--- a/cobigen-cli/pom.xml
+++ b/cobigen-cli/pom.xml
@@ -4,8 +4,14 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.devonfw.cobigen</groupId>
   <artifactId>cli</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>cobigen-cli</name>
+  
+  <parent>
+    <groupId>com.devonfw.cobigen</groupId>
+    <artifactId>master-parent</artifactId>
+    <version>dev-SNAPSHOT</version>
+  </parent>
 
   <properties>
     <junit.version>4.11</junit.version>
@@ -68,6 +74,16 @@
   </dependencies>
 
   <build>
+   <!-- Add correct version to artificial pom -->
+   <resources>
+      <resource>
+         <filtering>true</filtering>
+         <directory>src/main/resources</directory>
+         <includes>
+            <include>pom.xml</include>
+         </includes>
+      </resource>
+   </resources>
    <plugins>
       <plugin>
          <groupId>org.codehaus.mojo</groupId>
