--- a/cobigen-cli/src/main/resources/pom.xml
+++ b/cobigen-cli/src/main/resources/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.devonfw.cobigen</groupId>
   <artifactId>cli</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>${project.version}</version>
   <name>cobigen-cli</name>
 
   <properties>
