Fixing .settings and adding JavaDoc

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ cobigen/cobigen-htmlplugin/src/main/resources/lib/
 cobigen/cobigen-jsonplugin/src/main/resources/lib/
 cobigen/cobigen-senchaplugin/src/main/resources/lib/
 cobigen/cobigen-openapiplugin/src/main/resources/lib/
+cobigen-cli/class-loader-agent/.settings
 
 #Python
 *.pyc
