--- a/cobigen/cobigen-tsplugin/pom.xml
+++ b/cobigen/cobigen-tsplugin/pom.xml
@@ -32,6 +32,7 @@
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core</artifactId>
       <version>5.4.0-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
