JDK 11 core changes

--- a/cobigen/cobigen-core-parent/cobigen-core/pom.xml
+++ b/cobigen/cobigen-core-parent/cobigen-core/pom.xml
@@ -70,6 +70,27 @@
       <version>2.2.1.GA</version>
     </dependency>
     
+    <!-- Needed for JDK 9  -->
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>2.3.0</version>
+    </dependency>    
+    
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+
+    <!-- END JDK 9 -->
+    
     <dependency>
       <groupId>net.sf.dozer</groupId>
       <artifactId>dozer</artifactId>
@@ -179,7 +200,7 @@
       <plugin>
         <groupId>org.jvnet.jaxb2.maven2</groupId>
         <artifactId>maven-jaxb2-plugin</artifactId>
-        <version>0.12.3</version>
+        <version>0.14.0</version>
         <executions>
           <execution>
             <id>generate-v1.0-configuration</id>
