--- a/pom.xml
+++ b/pom.xml
@@ -203,8 +203,10 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.9.1</version>
+          <version>3.1.1</version>
           <configuration>
+          <!-- needed to fix javadoc on java 11+-->
+            <source>8</source>
             <quiet>true</quiet>
           </configuration>
         </plugin>
