--- a/cobigen-eclipse/cobigen-eclipse/build.properties
+++ b/cobigen-eclipse/cobigen-eclipse/build.properties
@@ -23,5 +23,5 @@ bin.includes = .,\
                lib/jaxb-api-2.3.1.jar,\
                lib/jaxb-runtime-2.3.2.jar,\
                lib/jaxb-core-2.3.0.jar,\
-               lib/core-5.4.0-SNAPSHOT.jar,\
-               lib/core-api-5.4.0-SNAPSHOT.jar
+               lib/core-5.4.0.jar,\
+               lib/core-api-5.4.0.jar
