--- a/cobigen/cobigen-tsplugin/pom.xml
+++ b/cobigen/cobigen-tsplugin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>tsplugin</artifactId>
   <name>CobiGen - TypeScript Plug-in</name>
-  <version>2.3.3-SNAPSHOT</version>
+  <version>2.3.3</version>
   <packaging>jar</packaging>
   <description>CobiGen - TypeScript Plug-in</description>
 
