--- a/cobigen-cli/cli/pom.xml
+++ b/cobigen-cli/cli/pom.xml
@@ -75,7 +75,7 @@
        <artifactId>class-loader-agent</artifactId>
        <version>1.0.0-SNAPSHOT</version> 
     </dependency>
-    <!-- https://mvnrepository.com/artifact/com.ea.agentloader/ea-agent-loader -->
+    <!-- We need an agent loader for the JUnit tests in Eclipse -->
     <dependency>
         <groupId>com.ea.agentloader</groupId>
         <artifactId>ea-agent-loader</artifactId>
