--- a/pom.xml
+++ b/pom.xml
@@ -622,6 +622,18 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <!-- separate eclipse build from command-line... -->
+      <id>eclipse</id>
+      <activation>
+        <property>
+          <name>eclipse.application</name>
+        </property>
+      </activation>
+      <build>
+        <directory>eclipse-target</directory>
+      </build>
+    </profile>
   </profiles>
 
   <distributionManagement>
