--- a/cobigen-cli/cli/src/test/resources/testdata/localmavenproject/maven.project/api/pom.xml
+++ b/cobigen-cli/cli/src/test/resources/testdata/localmavenproject/maven.project/api/pom.xml
@@ -9,6 +9,11 @@
   <artifactId>api</artifactId>
   <packaging>jar</packaging>
   <name>Test_Local_Maven_Project</name>
+  
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
 
 
   <dependencies>
