--- a/cobigen-cli/cli/src/test/resources/testdata/localmavenproject/maven.project/core/pom.xml
+++ b/cobigen-cli/cli/src/test/resources/testdata/localmavenproject/maven.project/core/pom.xml
@@ -8,6 +8,11 @@
   <artifactId>core</artifactId>
   <packaging>jar</packaging>
   <name>Test_Local_Maven_Project</name>
+  
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
 
   <dependencies>
      <dependency>
