--- a/cobigen-cli/class-loader-agent/pom.xml
+++ b/cobigen-cli/class-loader-agent/pom.xml
@@ -8,6 +8,8 @@
     <groupId>com.devonfw.cobigen</groupId>
     <artifactId>cli-parent</artifactId>
     <version>dev-SNAPSHOT</version>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
   </parent>
   
   
