--- a/cobigen-eclipse/cobigen-eclipse/.classpath
+++ b/cobigen-eclipse/cobigen-eclipse/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/core-6.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/core-api-6.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/ant-1.9.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-beanutils-1.9.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.1.jar"/>
@@ -7,8 +9,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-jxpath-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/core-5.5.0-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/core-api-5.5.0-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/dozer-5.5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-17.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-annotations-2.10.0.jar"/>
