--- a/cobigen-eclipse/cobigen-eclipse/build.properties
+++ b/cobigen-eclipse/cobigen-eclipse/build.properties
@@ -10,8 +10,6 @@ bin.includes = .,\
                lib/commons-io-2.4.jar,\
                lib/commons-jxpath-1.3.jar,\
                lib/commons-lang3-3.1.jar,\
-               lib/core-5.5.0-SNAPSHOT.jar,\
-               lib/core-api-5.5.0-SNAPSHOT.jar,\
                lib/dozer-5.5.1.jar,\
                lib/guava-17.0.jar,\
                lib/jackson-annotations-2.10.0.jar,\
@@ -29,4 +27,6 @@ bin.includes = .,\
                lib/logback-classic-1.1.2.jar,\
                lib/logback-core-1.1.2.jar,\
                lib/mmm-util-core-7.4.0.jar,\
-               lib/slf4j-api-1.7.21.jar
+               lib/slf4j-api-1.7.21.jar,\
+               lib/core-6.0.0.jar,\
+               lib/core-api-6.0.0.jar
