--- a/cobigen-eclipse/cobigen-eclipse/pom.xml
+++ b/cobigen-eclipse/cobigen-eclipse/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>com.devonfw.cobigen.eclipse</artifactId>
   <name>CobiGen - Eclipse Plug-In</name>
   <packaging>eclipse-plugin</packaging>
-  <version>4.5.0-SNAPSHOT</version>
+  <version>5.0.0-SNAPSHOT</version>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core</artifactId>
-      <version>5.5.0-SNAPSHOT</version>
+      <version>6.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
