--- a/cobigen-templates/templates-devon4j/src/test/resources/testdata/templatetest/TestAllTemplatesXMLInput/pom.xml
+++ b/cobigen-templates/templates-devon4j/src/test/resources/testdata/templatetest/TestAllTemplatesXMLInput/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.capgemini</groupId>
+  <groupId>com.devonfw</groupId>
   <artifactId>devon4jTemplateTest-TestAllTemplatesXMLInput</artifactId>
   <version>dev-SNAPSHOT</version>
 
@@ -9,8 +9,8 @@
     <plugins>
       <plugin>
         <groupId>com.devonfw.cobigen</groupId>
-        <artifactId>maven-plugin</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <artifactId>cobigen-maven-plugin</artifactId>
+        <version>5.0.0-SNAPSHOT</version>
         <executions>
           <execution>
             <id>generate</id>
