--- a/cobigen-templates/templates-devon4j/src/test/resources/testdata/templatetest/TestAllTemplatesRestServiceInput/pom.xml
+++ b/cobigen-templates/templates-devon4j/src/test/resources/testdata/templatetest/TestAllTemplatesRestServiceInput/pom.xml
@@ -22,7 +22,7 @@
     <plugins>
       <plugin>
         <groupId>com.devonfw.cobigen</groupId>
-        <artifactId>maven-plugin</artifactId>
+        <artifactId>cobigen-maven-plugin</artifactId>
         <version>4.1.0-SNAPSHOT</version>
         <executions>
           <execution>
