--- a/cobigen-eclipse/cobigen-eclipse-updatesite/pom.xml
+++ b/cobigen-eclipse/cobigen-eclipse-updatesite/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>eclipse</artifactId>
   <name>CobiGen - Eclipse Plug-In UpdateSite</name>
   <packaging>eclipse-repository</packaging>
-  <version>5.0.0-SNAPSHOT</version>
+  <version>5.0.0</version>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
