--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 # Handle line endings automatically for files detected as text
 # and leave all files detected as binary untouched.
-* text=auto
+* text eol=lf
+*.bat eol=crlf
 
 #
 # The above will handle all files NOT found below
@@ -39,3 +40,6 @@
 *.png           binary
 *.so            binary
 *.war           binary
+*.pdf		binary
+*.exe		binary
+*.zip		binary
