--- a/cobigen/cobigen-core-parent/pom.xml
+++ b/cobigen/cobigen-core-parent/pom.xml
@@ -7,7 +7,7 @@
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>cobigen-parent</artifactId>
     <version>dev-SNAPSHOT</version>
   </parent>
 
