--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
   </contributors>
 
   <organization>
-    <name>DevonFw</name>
+    <name>devonfw</name>
     <url>http://devonfw.com/</url>
   </organization>
 
