renaming of repo from tools-cobigen to cobigen

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ env:
   global:
     - ORG="devonfw"
     - EMAIL="icsddevonfwsupport.apps2@capgemini.com"
-    - REPO_SOURCE="tools-cobigen"
-    - REPO_DEST="tools-cobigen.wiki"
+    - REPO_SOURCE="cobigen"
+    - REPO_DEST="cobigen.wiki"
     - REPO_CONSOLIDATE="devonfw-guide"
     - GH_REPO_SOURCE="github.com/${ORG}/${REPO_SOURCE}.git"
     - GH_REPO_DEST="github.com/${ORG}/${REPO_DEST}.git"
