--- a/cobigen/cobigen-htmlplugin/pom.xml
+++ b/cobigen/cobigen-htmlplugin/pom.xml
@@ -39,4 +39,17 @@
       <version>1.10.2</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <resources> 
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+        <excludes>
+          <exclude>**/META-INF/externalservers/server.properties</exclude>
+          <exclude>**/META-INF/LICENSEP2BUNDLE.html</exclude>
+        </excludes>
+      </resource>
+    </resources>
+  </build>
 </project>
