--- a/cobigen/cobigen-jsonplugin/pom.xml
+++ b/cobigen/cobigen-jsonplugin/pom.xml
@@ -42,4 +42,17 @@
     </dependency>
  
   </dependencies>
+
+    <build>
+    <resources> 
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+        <excludes>
+          <exclude>**/META-INF/externalservers/server.properties</exclude>
+          <exclude>**/META-INF/LICENSEP2BUNDLE.html</exclude>
+        </excludes>
+      </resource>
+    </resources>
+  </build>
 </project>
