--- a/cobigen/cobigen-propertyplugin/pom.xml
+++ b/cobigen/cobigen-propertyplugin/pom.xml
@@ -37,4 +37,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+  <resources> 
+    <resource>
+      <directory>src/main/resources</directory>
+      <filtering>false</filtering>
+      <excludes>
+        <exclude>**/META-INF/externalservers/server.properties</exclude>
+        <exclude>**/META-INF/LICENSEP2BUNDLE.html</exclude>
+      </excludes>
+    </resource>
+  </resources>
+</build>
 </project>
