--- a/cobigen/cobigen-templateengines/cobigen-tempeng-velocity/pom.xml
+++ b/cobigen/cobigen-templateengines/cobigen-tempeng-velocity/pom.xml
@@ -49,6 +49,16 @@
   </dependencies>
   
   <build>
+    <resources> 
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+        <excludes>
+          <exclude>**/META-INF/externalservers/server.properties</exclude>
+          <exclude>**/META-INF/LICENSEP2BUNDLE.html</exclude>
+        </excludes>
+      </resource>
+    </resources>
     <plugins>
       <!-- Inject Velocity Properties in java-templates source folder -->
       <plugin>
