--- a/cobigen/cobigen-propertyplugin/pom.xml
+++ b/cobigen/cobigen-propertyplugin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>propertyplugin</artifactId>
   <packaging>jar</packaging>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>2.1.0</version>
   <name>CobiGen - Property File Plug-In</name>
   <description>CobiGen - Property File Plug-In</description>
 
