--- a/cobigen/cobigen-htmlplugin/pom.xml
+++ b/cobigen/cobigen-htmlplugin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>htmlplugin</artifactId>
   <name>CobiGen - HTML Plug-in</name>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>2.1.0</version>
   <packaging>jar</packaging>
   <description>CobiGen - HTML Plug-in</description>
 
