--- a/cobigen-eclipse/cobigen-eclipse/pom.xml
+++ b/cobigen-eclipse/cobigen-eclipse/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core</artifactId>
-      <version>6.0.0</version>
+      <version>6.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
