--- a/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestClassLoadingWithTemplateFolder/pom.xml
+++ b/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestClassLoadingWithTemplateFolder/pom.xml
@@ -4,7 +4,10 @@
   <groupId>com.devonfw.cobigen</groupId>
   <artifactId>Oasp4JTemplateTest-TestClassLoadingWithTemplateFolder</artifactId>
   <version>dev-SNAPSHOT</version>
-
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <build>
     <plugins>
       <plugin>
