--- a/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestDifferentFileSystems/pom.xml
+++ b/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestDifferentFileSystems/pom.xml
@@ -4,7 +4,10 @@
   <groupId>com.devonfw.cobigen</groupId>
   <artifactId>Oasp4JTemplateTest-TestDifferentFileSystems</artifactId>
   <version>dev-SNAPSHOT</version>
-
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <build>
     <plugins>
       <plugin>
@@ -33,7 +36,7 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>templates-oasp4j</artifactId>
-            <version>2.4.1</version>
+            <version>2.4.3</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
