--- a/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestEntityInputDataaccessGeneration/pom.xml
+++ b/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestEntityInputDataaccessGeneration/pom.xml
@@ -4,7 +4,10 @@
   <groupId>com.devonfw.cobigen</groupId>
   <artifactId>Oasp4JTemplateTest-TestEntityInputDataaccessGeneration</artifactId>
   <version>dev-SNAPSHOT</version>
-
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <build>
     <plugins>
       <plugin>
@@ -33,7 +36,7 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>templates-oasp4j</artifactId>
-            <version>2.4.0-SNAPSHOT</version>
+            <version>2.4.3</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
@@ -48,12 +51,12 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>xmlplugin</artifactId>
-            <version>3.2.0-SNAPSHOT</version>
+            <version>4.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>openapiplugin</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
         </dependencies>
       </plugin>
