--- a/cobigen-cli/cli/pom.xml
+++ b/cobigen-cli/cli/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>cli</artifactId>
-   <version>1.1.0-SNAPSHOT</version>
+   <version>1.1.0</version>
    <name>cobigen-cli</name>
    <description>Command Line Interface for CobiGen</description>
    
@@ -74,7 +74,7 @@
       <dependency>
          <groupId>com.devonfw.cobigen</groupId>
          <artifactId>class-loader-agent</artifactId>
-         <version>1.0.0-SNAPSHOT</version>
+         <version>1.1.0</version>
       </dependency>
       <!-- We need an agent loader for the JUnit tests in Eclipse -->
       <dependency>
