set cobigen core dependency to >= 5.4.0 to ensure that fasterxml dependencies are provided updated org.codehaus.jackson imports with com.fasterxml.jackson removed unnecessary else try block (can't find a case where it should be used)

--- a/cobigen/cobigen-tsplugin/pom.xml
+++ b/cobigen/cobigen-tsplugin/pom.xml
@@ -31,10 +31,9 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core</artifactId>
-      <version>5.4.0</version>
+      <version>[5.4.0,)</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
