--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: generic
+jdk:
+  - openjdk8
+  - openjdk11
+cache:
+  directories:
+    - "$HOME/.m2/repository"
 env:
   global:
     - ORG="devonfw"
