--- a/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestPackageInputDataaccessGeneration/pom.xml
+++ b/cobigen-maven/cobigen-maven-systemtest/src/test/resources/testdata/systemtest/Oasp4JTemplateTest/TestPackageInputDataaccessGeneration/pom.xml
@@ -5,6 +5,12 @@
   <artifactId>Oasp4JTemplateTest-TestPackageInputDataaccessGeneration</artifactId>
   <version>dev-SNAPSHOT</version>
 
+  <properties>
+    <!-- < JDK 8 not supported -->
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
