--- a/cobigen-maven/cobigen-maven-test/pom.xml
+++ b/cobigen-maven/cobigen-maven-test/pom.xml
@@ -30,6 +30,11 @@
       <artifactId>core-test</artifactId>
       <version>6.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.devonfw.cobigen</groupId>
+      <artifactId>core-api</artifactId>
+      <version>6.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
