#541 switch back to generic travis build in order to disable all defaults

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-language: java
+os: linux
+dist: xenial
+language: generic
 cache:
   directories:
     - "$HOME/.m2/repository"
@@ -23,27 +25,21 @@ jobs:
   include:
     - stage: Build & Test
       name: Build & Test (openjdk8)
-      script: ./scripts/travis-build-test.sh
+      script: jdk_switcher use openjdk8 && ./scripts/travis-build-test.sh
       if: (branch != gh-pages) AND (branch != dev_oomph_setup) AND (tag IS blank)
-      jdk: openjdk8
     - name: Build & Test (openjdk11)
-      script: ./scripts/travis-build-test.sh
+      script: jdk_switcher use openjdk11 && ./scripts/travis-build-test.sh
       if: (branch != gh-pages) AND (branch != dev_oomph_setup) AND (tag IS blank)
-      jdk: openjdk11
     - name: Build docs as PDF
-      script: ./scripts/travis-build-docs.sh
+      script: jdk_switcher use openjdk11 && ./scripts/travis-build-docs.sh
       if: (branch != gh-pages) AND (branch != dev_oomph_setup) AND (tag IS blank)
-      jdk: openjdk11
     - stage: Deploy
       name: Deploy M2
-      script: ./scripts/travis-deploy-m2.sh
+      script: jdk_switcher use openjdk11 && ./scripts/travis-deploy-m2.sh
       if: (branch != master) AND (branch != gh-pages) AND (branch != dev_oomph_setup) AND (branch != dev_eclipseplugin) AND (type != pull_request) AND (fork = false) AND (tag IS blank)
-      jdk: openjdk11
     - name: Deploy P2
-      script: ./scripts/travis-deploy-p2.sh
+      script: jdk_switcher use openjdk11 && ./scripts/travis-deploy-p2.sh
       if: (branch != master) AND (branch != gh-pages) AND (branch != dev_oomph_setup) AND (branch != dev_core) AND (branch != dev_mavenplugin) AND (type != pull_request) AND (fork = false) AND (tag IS blank)
-      jdk: openjdk11
     - name: Deploy docs to devonfw-guide & devonfw.com
-      script: ./scripts/travis-sync-docs.sh
+      script: jdk_switcher use openjdk11 && ./scripts/travis-sync-docs.sh
       if: (branch = master) AND (type != pull_request) AND (fork = false) AND (tag IS blank)
-      jdk: openjdk11
